--- a/index.html
+++ b/index.html
@@ -50,5 +50,37 @@
         </nav>
       </div>
     </header>
+
+    <section class="slider">
+      <div class="wrapper">
+        <div class="slider-content">
+          <scroll-container class="slide-container">
+            <scroll-page class="slider-slide" id="image-1">
+              <div class="image">
+                <img src="./assets/images/mulan.jpg" alt="image slide" />
+              </div>
+            </scroll-page>
+
+            <scroll-page class="slider-slide" id="image-2">
+              <div class="image">
+                <img src="./assets/images/raya.jpg" alt="image slide" />
+              </div>
+            </scroll-page>
+
+            <scroll-page class="slider-slide" id="image-3">
+              <div class="image">
+                <img src="./assets/images/unidos.jpg" alt="image slide" />
+              </div>
+            </scroll-page>
+          </scroll-container>
+
+          <div class="silder-bullet-list">
+            <a class="bullet bullet-selected" href="#image-1"></a>
+            <a class="bullet" href="#image-2"></a>
+            <a class="bullet" href="#image-3"></a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
