grid columns implementado

--- a/index.html
+++ b/index.html
@@ -82,5 +82,231 @@
         </div>
       </div>
     </section>
+
+    <section class="movies">
+      <div class="wrapper">
+        <div class="movies-content">
+
+          <h2 class="title">Todas las peliculas</h2>
+
+          <div class="grid-movies">
+            <div class="movie-item">
+              <div class="card">
+                <div class="card-content">
+                  <div class="ranking-point">
+                    <div class="ranking-content">
+                      <i class="icon-star"></i>
+                      <span class="point">7.1</span>
+                    </div>
+                  </div>
+                  <div class="image">
+                    <img src="./assets/images/artemis-fowl.jpg" alt="portada de ava">
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/ava.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/bill-ted-face-the-music.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/dark-forces.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/double-world.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/hard-kill.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/infamous.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/legacy-of-lies.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/project-power.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/rogue.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/santana.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/the-2nd.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/the-silencing.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/the-tax-collector.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-content">
+                <div class="ranking-point">
+                  <div class="ranking-content">
+                    <i class="icon-star"></i>
+                    <span class="point">7.1</span>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="./assets/images/unknown-origins.jpg" alt="portada de ava">
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
