botones en el slider

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
               <div class="image">
                 <img src="./assets/images/mulan.jpg" alt="image slide" />
               </div>
+              <div class="scroll-buttons">
+                <button class="btn btn-yelow"><i class="icon-play"></i> VER AHORA</button>
+                <br>
+                <button class="btn btn-black"><i class="icon-plus"></i> VER DESPUÉS</button>
+              </div>
             </scroll-page>
 
             <scroll-page class="slider-slide" id="image-2">
